# AED_DBT

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  404.html  README.md  dbt_project.yml  gerar_dados.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  todo.todo
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yml  bug.yml  funcionalidade.yml
app/: app.py  config_utils.py  dbt_utils.py  sql_utils.py
dbt/: index.html
dbt/intro/: index.html
dbt_project/: dbt_project.yml
dbt_project/models/: schema.yml
dbt_project/models/raw/: raw_cliente_pedido_pendente.sql  raw_faturamento_mensal.sql  raw_pedido.sql  raw_qtd_clientes.sql  raw_tempo_medio_entrega.sql  raw_ticket_medio_cliente.sql  raw_valor_total_canal_venda.sql  raw_valor_total_forma_pagamento.sql
dbt_project/models/staging/: stg_canais_venda.sql  stg_categoria.sql  (+11 more)
dbt_project/tests/: config.yml
docs/: dbt.md  index.md  sqlalchemy.md
docs/sqlalchemy/: intro.md
models/marketing/: mark_clientes_ativos.sql
models/marts/: mart_faturamento_mensal.sql  mart_pivot_genero_estado_civil.sql  mart_vendas.sql  mart_vendas_diarias.sql  marts_clientes_ativos.sql
models/staging/: stg_canais_venda.sql  stg_categorias.sql  stg_cliente_genero_estado_civil.sql  stg_clientes.sql  stg_estados.sql  stg_estados_civis.sql  stg_formas_pagamento.sql  stg_generos.sql  stg_pedidos.sql  stg_protudos.sql  stg_status.sql
scripts/: insert_data.py
search/: search_index.json
sqlalchemy/: index.html
sqlalchemy/intro/: index.html
src/: crud.py  database.py  models.py
tests/: config.yml
utils/: list_auxiliar.py
