[tool.poetry]
name = "aed-dbt"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
faker = "^37.0.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.39"
tqdm = "^4.67.1"
streamlit = "^1.44.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
mkdocs-material = "^9.6.9"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
docs = "dbt docs generate"
